--- a/Yangonfo.html
+++ b/Yangonfo.html
@@ -66,25 +66,25 @@
     
     <div class="container">
     <div class="box">
-       <a href="DanuPhyu Daw Saw Yee.html"><img src="images1/Danuphyu daw saw yee.jpg" alt="img">DanuPhyu Daw Saw Yee</div>
+       <a href="DanuPhyu Daw Saw Yeefo.html"><img src="images1/Danuphyu daw saw yee.jpg" alt="img">DanuPhyu Daw Saw Yee</div>
        <div class="box">
-         <a href="India Spice.html"><img src="images1/India spice1.jpg" alt="img">India Spice</div>
+         <a href="India Spicefo.html"><img src="images1/India spice1.jpg" alt="img">India Spice</div>
          <div class="box">
-          <a href="Min Lann.html"><img src="images1/Min Lann1.jpg" alt="img">Min Lann Seafood</div>
+          <a href="Min Lannfo.html"><img src="images1/Min Lann1.jpg" alt="img">Min Lann Seafood</div>
           <div class="box">
-            <a href="Shwe Bal.html"><img src="images1/Shwe Bal.jpg" alt="img">Shwe Bal</div>
+            <a href="Shwe Balfo.html"><img src="images1/Shwe Bal.jpg" alt="img">Shwe Bal</div>
 
   
   </div>
    <div class="container">
     <div class="box">
-      <a href="Oriental House.html"><img src="images1/Oriental House2.jpg" alt="img">Oriental House</div>
+      <a href="Oriental Housefo.html"><img src="images1/Oriental House2.jpg" alt="img">Oriental House</div>
        <div class="box">
-         <a href="Khaing Khaing Kyaw.html"><img src="images1/Khaing Khaing Kyaw.jpg" alt="img">Khaing Khaing Kyaw</div>
+         <a href="Khaing Khaing Kyawfo.html"><img src="images1/Khaing Khaing Kyaw.jpg" alt="img">Khaing Khaing Kyaw</div>
          <div class="box">
-          <a href="Dagon Kyaw.html"><img src="images1/Dagon Kyaw.jpg" alt="img">Dagon Kyaw</div>
+          <a href="Dagon Kyawfo.html"><img src="images1/Dagon Kyaw.jpg" alt="img">Dagon Kyaw</div>
           <div class="box">
-            <a href="Shwe pa lin.html"><img src="images1/Shwe Pa lin.jpg" alt="img">Shwe Pa lin</div>
+            <a href="Shwe pa linfo.html"><img src="images1/Shwe Pa lin.jpg" alt="img">Shwe Pa lin</div>
 
   
   </div>
